--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     </head>
 
     <body>
-      div id="main">
+      <div id="main">
         <div class="container">
         <header class="header">
             <h1 id="title" class="text-center">Job Application Form</h1>
