--- a/index.html
+++ b/index.html
@@ -56,10 +56,10 @@
             <div class="form-group">
               <p>Gender</p>
               <label>
-                <input type="user-recommend" value="Male" type="radio" class="input-radio" checked/>
+                <input type="user-recommend" value="Male" type="input-radio" class="input-radio" checked/>
                Male</label>
                <label>
-                <input type="user-recommend" value="Female" type="radio" class="input-radio"/>
+                <input type="user-recommend" value="Female" type="input-radio" class="input-radio"/>
                Female</label>
             </div> 
             <br> 
