--- a/index.html
+++ b/index.html
@@ -56,14 +56,14 @@
             <div class="form-group">
               <p>Gender</p>
               <label>
-                <input type="user-recommend" value="Male" type="input-radio" class="input-radio" checked/>
+                <input name="user-recommend" value="Male" type="radio" class="input-radio" checked/>
                Male</label>
                <label>
-                <input type="user-recommend" value="Female" type="input-radio" class="input-radio"/>
+                <input name="user-recommend" value="Female" type="radio" class="input-radio"/>
                Female</label>
             </div> 
             <br> 
-            
+              
             <!--Submit Button -->
             <div class="form-group">
               <button type="submit" id="submit" class="submit-button">Submit</button>
