--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             
             <!-- Mobile Number-->
             <div class="form-group">
-              <label id="age-label" for="mobno">AgeAge<span class="clue">(optional)</span></label>
+              <label id="age-label" for="mobno">Age<span class="clue">(optional)</span></label>
               <input type="number" name="age" id="number" min="18" max="65" class="form-control" placeholder="Enter your "Age"" required/>
             </div> 
             
