--- a/index.html
+++ b/index.html
@@ -120,6 +120,19 @@
               Operations and Management</label>
             </div> 
             
+           <!-- Confirmation-->
+            <div class="form-group">
+              <p> Please check the following if correct: <span class="clue">(Check all that apply)</span></p>
+              <label>
+                  <input name="prefer" value="criminal-records-verification" type="checkbox" class="input-checkbox" />
+               I currently don't have any criminal records.</label>
+              <label>
+                  <input name="prefer" value="relocate" type="checkbox" class="input-checkbox" />
+               I am willing to relocate if accepted.</label>
+               <label>
+                  <input name="prefer" value="uphold-behaviour" type="checkbox" class="input-checkbox" />
+              I will uphold the company standards and work ethics.</label>
+               </div>
         
             <!--Submit Button -->
             <div class="form-group">
